# world-model

./: .gitignore  ENVIRONMENT_WALKTHROUGH.md  README.md  SETUP.md  pyproject.toml  requirements.txt  run_pipeline.py
configs/: robot_world.xml
docs/: commands.md  guia-implementacao.md  guia-treino.md  research-report.md
physical_ai/: __init__.py
physical_ai/controller/: __init__.py  controller.py
physical_ai/envs/: __init__.py  arm_env.py
physical_ai/models/: __init__.py  mdnrnn.py  vae.py
physical_ai/utils/: __init__.py  preprocessing.py
scripts/: 01_collect_vae_data.py  02_train_vae.py  03_collect_rnn_data.py  04_train_rnn.py  05_train_controller.py  06_run_agent.py  07_evaluate.py  main.py  run_planner.py  test_env.py  view_env.py  visualize.py  visualize_dynamics.py  visualize_latent.py  visualize_latent_space.py  visualize_rnn.py  visualize_robot.py  visualize_state_space.py
src/: __init__.py
src/environment/: __init__.py  arm.py  arm_env.py  renderer.py
src/models/: __init__.py  dynamics.py  mdn_rnn.py  vae.py
src/planning/: __init__.py  language_goal.py  mpc.py
src/training/: __init__.py  collect_data.py  train_dynamics.py  train_rnn.py  train_vae.py
