[project]
name = "physical-ai"
version = "0.1.0"
description = "Physical AI for robotic arm - World Models (VAE + MDN-RNN + CMA-ES)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium[mujoco]>=1.0.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "cma>=3.3.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
